@@ -193,7 +193,7 @@ BEGIN
     IDS_MENUADD             "Add..."
     IDS_MENUREVERT          "Revert..."
     IDS_MENUCLEANUP         "Clean Up"
-    IDS_MENURESOLVE         "Resolved"
+    IDS_MENURESOLVE         "Resolved..."
 END
 
 STRINGTABLE 
